[package]
name = "enimda"
version = "0.4.1"
authors = ["Anton Smolin"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/embali/enimda-rs/"
homepage = "https://github.com/embali/enimda-rs/"
documentation = "https://docs.rs/enimda/"
description = """Entropy-based image border detection"""
keywords = ["image", "enimda", "border", "algorithm", "entropy"]
categories = ["multimedia::images", "algorithms"]
exclude = ["tests/images/*"]

[badges]
travis-ci = { repository = "embali/enimda-rs" }

[dependencies]
rand = "0.3.15"
image = "0.12.3"
gif = "0.9.0"
gif-dispose = "1.0.1"
image-utils = "0.2.0"
